--- a/build
+++ b/build
@@ -1,8 +1,3 @@
 #!/usr/bin/env bash
-# docker build -t php:base-laminas .
 
-docker stop laminas
-docker rm laminas
-
-docker build -t php:base-laminas .
-docker run -d --name laminas -p 80:80 php:base-laminas
+docker build -t php-base-laminas .
