--- a/code/config/autoload/development.local.php.dist
+++ b/code/config/autoload/development.local.php.dist
@@ -18,6 +18,10 @@
 
 return [
     'view_manager' => [
+        'display_not_found_reason' => true,
         'display_exceptions' => true,
+    ],
+    'module_listener_options' => [
+        'config_cache_enabled' => false,
     ],
 ];
