Added JWT to user and other small updates

--- a/code/module/UserAuth/config/autoload/user-db.local.php.dist
+++ b/code/module/UserAuth/config/autoload/user-db.local.php.dist
@@ -31,6 +31,7 @@ return [
             'user-auth-registration-allowed' => true,
             'user-auth-must-verify-email' => true,
             'user-auth-default-user-status' => User::STATUS_ACTIVE,
+            'JWT_SECRET'=>'Secret key for the JWT. The longer the more secure',
         ],
     ),
     'gc-notify-config'=>[
