--- a/code/module/ActiveDirectory/config/autoload/ldap.local.php.dist
+++ b/code/module/ActiveDirectory/config/autoload/ldap.local.php.dist
@@ -2,36 +2,27 @@
 return [
     'service_manager' => [
         'services' => [
+            /**
+            * @var array of all LDAP configuration, hosts and baseDN is required
+            */
             'ldap-options' => [
                 '1'=>[
-                    'host'            => 'HCQCK1AWVDCP001.ad.hc-sc.gc.ca',
-                    'username'        => 'AD\sv-mySource-LDAP',
-                    'password'        => '***** removed *****',
+                    'host'            => 'host-of-AD.hc-sc.gc.ca',
                     'baseDn'          => 'OU=User Accounts,OU=Accounts,OU=Health Canada,DC=ad,DC=hc-sc,DC=gc,DC=ca',
+                    //'username'        => '***** removed *****',
+                    //'password'        => '***** removed *****',
                     //'bindRequiresDn'  => true,
                     //'useSsl'          =>true,
+                    //'port'            => 389,
                 ],
-                '2'=>[
-                    'host'            => 'HCONK1VWVDCP002.ad.hc-sc.gc.ca',
-                    'username'        => 'AD\sv-mySource-LDAP',
-                    'password'        => '***** removed *****',
-                    'baseDn'          => 'OU=User Accounts,OU=Accounts,OU=Health Canada,DC=ad,DC=hc-sc,DC=gc,DC=ca',
-                    //'bindRequiresDn'  => true,
-                    //'useSsl'          =>true,
-                ],
-                '5'=>[
-                    'host'            => 'HCONK1VWVDCP005.ad.hc-sc.gc.ca',
-                    'username'        => 'AD\sv-mySource-LDAP',
-                    'password'        => '***** removed *****',
-                    'baseDn'          => 'OU=User Accounts,OU=Accounts,OU=Health Canada,DC=ad,DC=hc-sc,DC=gc,DC=ca',
-                    //'bindRequiresDn'  => true,
-                    //'useSsl'          =>true,
-                ],
-                'ldap-legacy-options' => [
-                    'host'            => 'r6ldap01.hc-sc.gc.ca',
+                '...n'=>[
+                    'host'            => 'host-of-AD.hc-sc.gc.ca',
                     'baseDn'          => 'OU=HC-SC,O=GC,C=CA',
-                    'port'            => 389,
+                    //'username'        => '***** removed *****',
+                    //'password'        => '***** removed *****',
                     //'bindRequiresDn'  => true,
+                    //'useSsl'          =>true,
+                    //'port'            => 389,
                 ],
             ],
         ],
