dev env display errors correctly. Moved SetResponseHeaders to Application module. Added Adobe Analytics code

--- a/code/composer.json
+++ b/code/composer.json
@@ -16,8 +16,7 @@
         "laminas/laminas-session": ">2.10.0",
         "laminas/laminas-di": ">3.2.2",
         "laminas/laminas-loader": ">2.7",
-        "laminas/laminas-ldap": "^2.17",
-        "lm-commons/lmc-user": ">3.1"
+        "laminas/laminas-ldap": "^2.17"
     },
     "autoload": {
         "psr-4": {
