--- a/code/package.json
+++ b/code/package.json
@@ -20,6 +20,7 @@
     "gulp-rename": "*",
     "gulp-terser": "*",
     "gulp-sourcemaps": "*",
+    "gulp-sri": "*",
     "postcss": "*",
     "postcss-cli": "*",
     "postcss-import": "*",
