--- a/code/composer.json
+++ b/code/composer.json
@@ -16,7 +16,8 @@
         "laminas/laminas-session": ">2.10.0",
         "laminas/laminas-di": ">3.2.2",
         "laminas/laminas-loader": ">2.7",
-        "laminas/laminas-ldap": "^2.17"
+        "laminas/laminas-ldap": "^2.17",
+        "laminas/laminas-crypt": "*"
     },
     "autoload": {
         "psr-4": {
