--- a/build
+++ b/build
@@ -1,8 +1,4 @@
 #!/usr/bin/env bash
 
-docker pull jack.hc-sc.gc.ca/php/php-base:latest
-docker pull jack.hc-sc.gc.ca/php/php-base:8.2
-docker pull jack.hc-sc.gc.ca/php/php-base:8.2-mongodb
-
-docker build -t php-base-laminas -f dockerfile .
-docker build -t php-base-laminas-mongodb -f dockerfile-mongodb .
+docker build --pull -t php-base-laminas:latest -f dockerfile83 .
+docker build --pull -t php-base-laminas-mongodb:latest -f dockerfile83-mongodb .
