--- a/dockerfile83-mongodb
+++ b/dockerfile83-mongodb
@@ -1,4 +1,4 @@
-FROM jack.hc-sc.gc.ca/php/php-base:latest-mongodb
+FROM jack.hc-sc.gc.ca/php/php-base:83-mongodb
 # when local
 #FROM php-base:latest-mongodb
 
