re-added the laminas/log since it was fixed for PHP 8.3

--- a/code/composer.json
+++ b/code/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "laminas/laminas-component-installer": "*",
         "laminas/laminas-development-mode": "*",
+        "laminas/laminas-log": "*",
         "laminas/laminas-mvc": "*",
         "laminas/laminas-cli": "*",
         "laminas/laminas-mvc-i18n": "*",
