--- a/dockerfile83-mongodb
+++ b/dockerfile83-mongodb
@@ -31,6 +31,7 @@ RUN git clone https://github.com/duprasf/Void.git /var/www/vendor/Void/.
 RUN npm install --global gulp-cli
 RUN npm install
 RUN composer update
+RUN composer require mongodb/mongodb
 
 RUN rm -rf /var/lib/apt/lists/*
 
