--- a/dockerfile82-mongodb
+++ b/dockerfile82-mongodb
@@ -19,7 +19,7 @@ RUN NODE_MAJOR=18; \
     echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" \
      > /etc/apt/sources.list.d/nodesource.list;
 
-RUN apt-get update && apt-get install nodejs -y;
+RUN apt-get update && apt-get install nodejs npm -y;
 
 
 WORKDIR /var/www
