--- a/code/config/autoload/page-builder.php.dist
+++ b/code/config/autoload/page-builder.php.dist
@@ -1,32 +1,43 @@
 <?php
-$start = microtime(true);
+
+declare(strict_types=1);
+
+use Laminas\Mvc\Application;
+use Laminas\Stdlib\ArrayUtils;
+
+
+$root = getenv('LAMINAS_ROOT_PATH') ?: dirname(__DIR__);//'/var/www';
+/**
+ * This makes our life easier when dealing with paths. Everything is relative
+ * to the application root now.
+ */
+chdir($root);
 
 // Decline static file requests back to the PHP built-in webserver
-if (php_sapi_name() === 'cli-server' && is_file(__DIR__ . parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH))) {
-    return false;
+if (php_sapi_name() === 'cli-server') {
+    $path = realpath(__DIR__ . parse_url($_SERVER['REQUEST_URI'], PHP_URL_PATH));
+    if (is_string($path) && __FILE__ !== $path && is_file($path)) {
+        return false;
+    }
+    unset($path);
 }
 
-// Setup autoloading
-//getcwd();
-// when using a public/ with symlink the autoloader is only one level higher
-if(file_exists(dirname(__DIR__).DIRECTORY_SEPARATOR.'init_autoloader.php')) {
-    chdir(dirname(__DIR__));
+// Composer autoloading
+include $root.'/vendor/autoload.php';
+if (! class_exists(Application::class)) {
+    throw new RuntimeException(
+        "Unable to load application.\n"
+        . "- Type `composer install` if you are developing locally.\n"
+        . "- Type `vagrant ssh -c 'composer install'` if you are using Vagrant.\n"
+        . "- Type `docker-compose run laminas composer install` if you are using Docker.\n"
+    );
 }
-// if not, it is in the framework folder in the parent directory
-else {
-    chdir(dirname(__DIR__).'/framework');
+
+// Retrieve configuration
+$appConfig = require $root.'/config/application.config.php';
+if (file_exists($root.'/config/development.config.php')) {
+    $appConfig = ArrayUtils::merge($appConfig, require $root.'/config/development.config.php');
 }
-require 'init_autoloader.php';
 
 // Run the application!
-$config = require 'config/application.config.php';
-if(is_file('./config/autoload/_modules.local.php') && is_readable('./config/autoload/_modules.local.php')) {
-    $config = array_merge_recursive($config, require './config/autoload/_modules.local.php');
-}
-Zend\Mvc\Application::init($config)->run($config);
-
-$end = microtime(true);
-// $generatedTime = $end - $start;
-
-
-
+Application::init($appConfig)->run();
