--- a/dockerfile82-mongodb
+++ b/dockerfile82-mongodb
@@ -16,12 +16,9 @@ RUN apt-get update -y; \
 RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key \
      | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg;
 
-RUN NODE_MAJOR=18; \
-    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" \
-     > /etc/apt/sources.list.d/nodesource.list;
-
-RUN apt-get update && apt-get install nodejs npm -y;
-
+# install node and npm
+COPY --from=node:18-slim /usr/local/bin /usr/local/bin
+COPY --from=node:18-slim /usr/local/lib/node_modules /usr/local/lib/node_modules
 
 WORKDIR /var/www
 COPY --chown=www-data code/ /var/www/
