Added autoload_classmap generator and phpunit support

--- a/code/composer.json
+++ b/code/composer.json
@@ -23,6 +23,7 @@
     },
     "require-dev": {
         "laminas/laminas-test": "*",
+        "composer/class-map-generator": "*",
         "phpunit/phpunit": "*"
     },
     "autoload": {
