--- a/dockerfile82-mongodb
+++ b/dockerfile82-mongodb
@@ -1,8 +1,8 @@
 FROM jack.hc-sc.gc.ca/php/php-base:8.2-mongodb
 
-LABEL title = 'Laminas framework with npm/gulp. Apps going in /apps/'
-LABEL author = 'Web/Mobile Team (imsd.web-dsgi@hc-sc.gc.ca)'
-LABEL source = 'https://github.hc-sc.gc.ca/hs/php-base-laminas'
+LABEL title='Laminas framework with npm/gulp. Apps goes in /apps/'
+LABEL author='Web/Mobile Team (imsd.web-dsgi@hc-sc.gc.ca)'
+LABEL source='https://github.hc-sc.gc.ca/hs/php-base-laminas'
 
 # These environment variables are setup just to let the application know it is using Laminas
 # The app would know it is in Laminas, the server signature uses this to return Laminas, Drupal or something else.
@@ -20,26 +20,26 @@ RUN apt-get update -y; \
     apt-get install -y ca-certificates curl gnupg; \
     mkdir -p /etc/apt/keyrings;
 
+# Set the working dir and copy all the code folder in the www folder
+WORKDIR /var/www
+COPY --chown=www-data code/ /var/www/
+
 # get the GPG public key for node
 RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key \
      | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg;
 
 # install node and npm
-COPY --from=node:18-slim /usr/local/bin /usr/local/bin
-COPY --from=node:18-slim /usr/local/lib/node_modules /usr/local/lib/node_modules
-
-# Set the working dir and copy all the code folder in the www folder
-WORKDIR /var/www
-COPY --chown=www-data code/ /var/www/
-
-# Make a folder and clone the Void repo (developed by Francois Dupras)
-RUN mkdir -p /var/www/vendor/Void && git clone https://github.com/duprasf/Void.git /var/www/vendor/Void/.
+COPY --from=node:23-slim /usr/local/bin /usr/local/bin
+COPY --from=node:23-slim /usr/local/lib/node_modules /usr/local/lib/node_modules
 
 # Install Gulp and the Gulp modules for PostCSS
 RUN npm install --global gulp-cli && npm install
 
-# Install all the composer package including Zend Framework & the PHP mongoDB library
-RUN composer update && composer require mongodb/mongodb
+# Install all the composer package including Zend Framework
+RUN composer update
+
+# Make a folder and clone the Void repo (developed by Francois Dupras)
+RUN mkdir -p /var/www/vendor/Void && git clone https://github.com/duprasf/Void.git /var/www/vendor/Void/.
 
 # Make a cache folder (used by OP Cache) and link /var/www/html to /public
 RUN mkdir -p /var/www/data/cache \
