--- a/dockerfile82-mongodb
+++ b/dockerfile82-mongodb
@@ -17,7 +17,9 @@ RUN set -uex;
 
 # update the OS and make sur the required package are installed
 RUN apt-get update -y; \
-    apt-get install -y ca-certificates curl gnupg; \
+RUN if test -f "/etc/apt/sources.list"; then sed -i "s@http://@https://@g" /etc/apt/sources.list; fi
+RUN if test -f "/etc/apt/sources.list.d/debian.sources"; then sed -i "s@http://@https://@g" /etc/apt/sources.list.d/debian.sources; fi
+RUN apt-get install -y ca-certificates curl gnupg; \
     mkdir -p /etc/apt/keyrings;
 
 # Set the working dir and copy all the code folder in the www folder
